# hatyan

./: .bumpversion.cfg  .gitignore  CITATION.cff  CONTRIBUTING.md  HISTORY.rst  MANIFEST.in  README.md  environment.yml  environment_hmc.yml  hatyan_python-latest.spec  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_hmc.txt  setup.cfg  setup.py  test_python3.spec
.github/workflows/: RPM-build.ym  RPM-build.yml  SIG-upload.yml  generate-documentation.yml  pytest-devenv.yml  pytest-hmcenv.yml  pytest-py310-mindeps.yml  pytest-py310.yml  pytest-py311.yml  pytest-py312.yml  pytest-py37.yml  pytest-py38-mindeps.yml  pytest-py38.yml  pytest-py39-mindeps.yml  pytest-py39.yml  pytest.yml  python-pytest-main-devenv.yml  python-pytest-main-py39.yml  python-pytest-main.yml  release.yml  rpm-build-core  rpm-build-core.yml  sigrid-publish.yml  sigrid-pullrequest.yml  sphinx-docs.yml
doc/: data_overzicht_20190528.xlsx  hatyan_functions.md
doc/hatyan/: analysis_prediction.html  astrog.html  components.html  foreman_core.html  hatyan_core.html  index.html  timeseries.html  wrapper_RWS.html
docs/: CONTRIBUTING.md  Makefile  api_reference.md  command-line.md  conf.py  index.rst  make.bat  minimal_example.rst  modules.rst  tutorials.md  user_guide.rst  whats-new.md
docs/hatyan/: KW_gemgetij.html  KW_havengetallen.html  analysis_prediction.html  astrog.html  components.html  convert.html  foreman.html  getonlinedata.html  hatyan_core.html  index.html  kenmerkendewaarden.html  kw_gemgetij.html  kw_havengetallen.html  kw_overschrijding.html  kw_slotgemiddelden.html  overschrijding.html  schureman.html  timeseries.html  wrapper_RWS.html
docs/notebooks/: getting-started.ipynb  overlap_regridder.py
hatyan/: KW_gemgetij.py  KW_havengetallen.py  KW_overschrijding.py  KW_slotgemiddelden.py  __init__.py  __main__.py  analysis_prediction.py  astrog.py  cli.py  components.py  convert.py  data_M2phasediff_perstation.txt  data_components_foreman.txt  data_components_hatyan.pkl  data_foreman_harmonic.txt  data_foreman_shallowrelations.txt  data_shallowrelations.txt  ddlpy_helpers.py  deprecated.py  foreman.py  foreman_core.py  getonlinedata.py  hatyan_core.py  kenmerkendewaarden.py  kw_gemgetij.py  kw_slotgemiddelden.py  kwa_havengetallen.py  metadata.py  metadata_tomerge.py  overschrijding.py  schureman.py  schureman_core.py  timeseries.py  utils.py  wrapper_RWS.py
hatyan/data/: data_foreman_frequencies.txt  data_foreman_harmonic.txt  data_foreman_shallowrelations.txt  data_schureman_harmonic.csv  data_schureman_shallowrelations.csv
notebooks/: getting-started.ipynb
scripts/: generate_documentation.py  hatyan.sh  hatyan_python-latest.spec  hatyan_python-latest_git.spec  hatyan_python-latest_python3.spec  hatyan_rpmbuild.sh  hatyan_rpmbuild_nobinaries.sh
scripts/doc/hatyan/: analysis_prediction.html  astrog.html  components.html  foreman_core.html  hatyan_core.html  index.html  timeseries.html  wrapper_RWS.html
tests/: hatyan_colab.ipynb  test_analysis_prediction.py  test_astrog.py  test_astrog_main.py  test_cli.py  test_components.py  test_convert.py  test_ddlpy_helpers.py  test_deprecated.py  test_examples.py  test_hatyan.py  test_hatyan_configfiles.py  test_hatyan_examples.py  test_hatyan_main.py  test_metadata.py  test_metadata_tomerge.py  test_timeseries.py  test_writetsdia.py
tests/configfiles/: analysis_prediction_comparesettings.py  analysis_xfac.py  astrog_test.py  export_freq_v0uf_data.py  numbering_FEWS_PG.py  numbering_extremes.py  predictie_2019_19Ycomp4Ydia.py  predictie_2019_19Ycomp4Ydia_VLISSGN_interactive.py  predictie_2019_allfromdia.py  predictie_2019_frommergedcomp.py  predictie_2019_frommergedcomp_AWGPFMDDPTS.py  predictie_2019_frommergedcomp_HWLWagger.py  predictie_2019_frommergedcomp_WSdwarsstroming.py  spatialsummary.py  tides_dutchcoast.py
tests/data_unitsystemtests/: D15_ana.txt  D15_obs1.txt  DENHDR_ana.txt  DENHDR_ana_nometadata.txt  DOVR_obs1.txt  EURPHVN_ana.txt  HOEKVHLD_ana.txt  HOEKVHLD_obs19.txt  LITHDP_ana.txt  ROTTDM_ana.txt  VLISSGN_ana.txt  VLISSGN_ext.txt  VLISSGN_obs1.txt  VLISSGN_obs19.txt  VLISSGN_obs2.txt  VLISSGN_obs3.txt  VLISSGN_obs4.txt  VLISSGN_pre.txt  VLISSGN_waterlevel_20180101_20180401.noos  _slotgemiddelden_predictie2019.txt  altimeter_tsinterval_artificial.noos  diawia_HOEKVHLD_astro_extremen.dia  diawia_HOEKVHLD_astro_extremen.wia  diawia_HOEKVHLD_astro_tijdreeks.dia  diawia_HOEKVHLD_astro_tijdreeks.wia  hoek_har.dia
tests/examples/: KWK_getcheckdata.py  KWK_process.py  Rayleigh_Nuiquist_research_interval3hr.py  Rayleigh_Nyquist_research_interval3hr.py  TEMP_SASMissue_20221201.py  TEMP_astrog_sunrise_lonissue.py  TEMP_improvecore.py  TEMP_wiadia_checkHOEKVHLD.py  WMCN_tidescourse.py  WSdwarsstroming_predictie.py  analysis_prediction_comparesettings.py  analysis_tidalcurrents.py  analysis_xfac.py  astro2022_2cm_diff_rounding_error.py  astrog_example.py  astrog_test.py  check_duplicate_components.py  compare_foremanschureman_freqs.py  compare_foremanschureman_prediction.py  compare_ttide_hatyan.py  export_freq_v0uf_data.py  fft_canadianarctic.py  get_onlinedata_DDL.py  getting-started.ipynb  hatyan_colab.ipynb  longtimeseries_analysis.py  minimal_example.py  nodal_alltimes_prediction.py  numbering_FEWS_PG.py  numbering_extremes.py  predictie_2019_19Ycomp4Ydia.py  predictie_2019_19Ycomp4Ydia_VLISSGN.py  predictie_2019_19Ycomp4Ydia_VLISSGN_interactive.py  predictie_2019_allfromdia.py  predictie_2019_frommergedcomp.py  predictie_2019_frommergedcomp_AWGPFMDDPTS.py  predictie_2019_frommergedcomp_HWLWagger.py  predictie_2019_frommergedcomp_WSdwarsstroming.py  predictie_2022_frommergedcomp_LAT.py  predictie_2022_frommergedcomp_LATindication_y1min.py  (+4 more)
tests/notebooks/: getting-started.ipynb  hatyan_colab.ipynb
