[metadata]
license_files = ('LICENSE','LICENSE.LESSER')

[bumpversion]
current_version = 2.5.33
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:hatyan/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:scripts/hatyan_python-latest_python3.spec]
search = Version:     {current_version}
replace = Version:     {new_version}

[flake8]
ignore = W291,W293,W391,W503,W504,E127,E128,E201,E202,E203,E211,E221,E222,E225,E226,E228,E231,E241,E261,E262,E265,E266,E501
