[metadata]
name = hatyan
version = 2.5.93
author = Jelmer Veenstra
author_email='Jelmer.Veenstra@Deltares.nl',
description = hatyan is a tidal analysis and prediction tool of Rijkswaterstaat
long_description = file: README.md
#long_description_content_type='text/markdown',
url = https://github.com/Deltares/hatyan
keywords = hatyan, tidal analysis, tidal prediction
license = GNU Lesser General Public License v3 (LGPLv3)
license_files = ('LICENSE','LICENSE.LESSER')
classifiers=
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	Operating System :: OS Independent
	Topic :: Scientific/Engineering :: Information Analysis

[options]
python_requires = >=3.6.12, <4 #TODO: will be 3.7 or 3.8 after RPM is dropped
install_requires = 
    scipy>=1.5.4
	numpy>=1.18.4
	matplotlib>=3.2.1
	pandas>=1.1.2
	netCDF4>=1.5.3
	pyproj>=2.2.0
	sip>=4.19.8
	packaging>=21.0
	requests
	statsmodels
packages = find:
include_package_data = True
zip_safe = False

#[options.package_data]
#hatyan =
#	data/*

[options.extras_require]
test = 
    pytest
    #coverage
	bump2version>=0.5.11
	pytest-cov
	pdoc3
	pandoc
	#pyqt5
	#twine
#test_suite = tests

[bumpversion]
current_version = 2.5.93
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:hatyan/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:scripts/hatyan_python-latest_python3.spec]
search = Version:     {current_version}
replace = Version:     {new_version}

[bumpversion:file:CITATION.cff]
search = version: {current_version}
replace = version: {new_version}

[flake8]
ignore = W291,W293,W391,W503,W504,E127,E128,E201,E202,E203,E211,E221,E222,E225,E226,E228,E231,E241,E261,E262,E265,E266,E501

