[metadata]
name = hatyan
version = 2.7.1
author = Jelmer Veenstra
author_email = Jelmer.Veenstra@Deltares.nl
description = hatyan is a tidal analysis and prediction tool of Rijkswaterstaat
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Deltares/hatyan
keywords = hatyan, tidal analysis, tidal prediction
license = GNU Lesser General Public License v3 (LGPLv3)
license_files = ('LICENSE','LICENSE.LESSER')
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	Operating System :: OS Independent
	Topic :: Scientific/Engineering :: Information Analysis
	License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8
install_requires = 
	scipy>=1.5.4
	numpy>=1.18.4
	matplotlib>=3.2.1
	pandas>=1.2.0
	netCDF4>=1.5.3
	pyproj>=2.2.0
	sip>=4.19.8
	requests
	statsmodels
	xarray
packages = find:
include_package_data = True
zip_safe = False

[options.package_data]
hatyan = 
	data/*

[options.extras_require]
test = 
	bump2version>=0.5.11
	flake8
	pytest
	pytest-cov
	twine
	jupyter
	notebook
	mkdocs
	mkdocs-material
	mkdocs-jupyter
	mkdocstrings-python
	mkdocs-exclude
complete = 
	%(test)s

[tool:pytest]
python_files = test_*.py
console_output_style = count
norecursedirs = tests/*
addopts = -v --tb=short --durations=5
testpaths = 
	tests
markers = 
	unittest: mark a test as unittest. Used for testing single methods.
	systemtest: mark a test as systemtest. Used for testing at a higher level, verifying a given input returns the expected output.
	acceptance: mark a test as acceptance. Used for non-functional requirements and data that needs to be human-verified.

[flake8]
exclude = docs
ignore = W291,W293,W391,W503,W504,E127,E128,E201,E202,E203,E211,E221,E222,E225,E226,E228,E231,E241,E261,E262,E265,E266,E501
